[package]
name = "dotnet-clr-nostd"
version = "0.1.0"
edition = "2024"
authors = ["Matt Gates <suhteevah@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "no_std .NET CLR — CIL interpreter with GC and BCL for bare metal"
repository = "https://github.com/suhteevah/dotnet-clr-nostd"
keywords = ["dotnet", "clr", "csharp", "interpreter", "no_std"]
categories = ["no-std", "os"]
readme = "README.md"

[dependencies]
log = { version = "0.4", default-features = false }
spin = { version = "0.9", default-features = false }

